--- a/algorithm_OpenMP/algorithm_OpenMP.vcxproj.filters
+++ b/algorithm_OpenMP/algorithm_OpenMP.vcxproj.filters
@@ -15,7 +15,7 @@
     </Filter>
   </ItemGroup>
   <ItemGroup>
-    <ClCompile Include="algorithm.cpp">
+    <ClCompile Include="..\Parralel programming uni\algorithm_OpenMP.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
   </ItemGroup>
